apps/whereami/whereami-frontend/k8s/base/authzpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-from-asm-ingress-gateway
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - asm-gateways
